# StereoLocalisation

./: .gitignore  CMakeLists.txt  README.md  plot_trajectories.m
include/: asnconversion.hpp
rsrc/: DFN_stereoSlamOrb.yaml  StereoSlamOrbSettings_Ibis.yaml  StereoSlamOrbSettings_PEL.yaml  StereoSlamOrbSettings_kesskess.yaml  StereoSlamOrb_Ibis.yaml  StereoSlamOrb_PEL.yaml  StereoSlamOrb_kesskess.yaml  VisualSlamStereo.yaml
rsrc/share/cmake/: CDFFConfig.cmake
src/: asnconversion.cpp  main_orbslam.cpp  main_tracking.cpp  main_viso.cpp  main_visualslam.cpp  main_vo.cpp
